fix z-index

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -6,7 +6,6 @@
   position: absolute;
   right: 0px;
   top: -120px;
-  z-index: 100;
 }
 
 .HomePage .content {
